--- a/packages/celer-vscode-extension/language-configuration.json
+++ b/packages/celer-vscode-extension/language-configuration.json
@@ -7,13 +7,15 @@
     "brackets": [
         ["{", "}"],
         ["[", "]"],
-        ["(", ")"]
+        ["(", ")"],
+        ["<", ">"],
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
+        ["<", ">"],
         ["\"", "\""],
         ["'", "'"]
     ],
@@ -22,7 +24,9 @@
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
+        ["<", ">"],
         ["\"", "\""],
         ["'", "'"]
-    ]
+    ],
+    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^_\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
