--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         python-version: 3.10
     - name: Setup | toml, pyyaml, pylint, pylint-quotes
-    - uses: BSFishy/pip-action@v1
+      uses: BSFishy/pip-action@v1
       with:
         packages: |
           toml
