--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup | Rust
       uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
     - name: Setup | wasm-pack
       uses: jetli/wasm-pack-action@v0.3.0
       with:
