--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
-        python-version: 3.10
+        python-version: '3.10'
     - name: Setup | toml, pyyaml, pylint, pylint-quotes
       uses: BSFishy/pip-action@v1
       with:
@@ -44,7 +44,7 @@ jobs:
     - name: Setup | Node 16.4.2
       uses: actions/setup-node@v3.0.0
       with:
-        node-version: 16.14.2
+        node-version: '16.14.2'
     - name: Setup | CI Install
       run: just ci
     - name: Build | Lint
