update python recipes

--- a/packages/celer-code-generator/Justfile
+++ b/packages/celer-code-generator/Justfile
@@ -2,10 +2,10 @@ lint:
     pylint generate.py scripts
 
 build:
-    ./generate.py
+    python3 ./generate.py
 
 apply:
-    ./generate.py apply
+    python3 ./generate.py apply
 
 clean:
     rm -rf build
