--- a/packages/celer-web-app/public/manifest.json
+++ b/packages/celer-web-app/public/manifest.json
@@ -3,19 +3,14 @@
   "name": "Celer Route Engine",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "celer.ico",
+      "sizes": "128x128 64x64 32x32 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "celer.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "128x128"
     }
   ],
   "start_url": ".",
