Fix shrine spelling and (partially) hook codegen to web-app (#4)
* start working on cli

* start on rust, upgrade code gen

* start on rust, upgrade code gen

* add codegen verify, fix koroks and shrines

* make codegen verify depend on build

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ build/
 release/
 # Rust
 target/
-Cargo.lock
 # Packaged VS Code Extension
 .vsix
 
@@ -25,3 +24,10 @@ __pycache__
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# debugging files
+main.celer
+bundle.json
+bundle.src.celer
+bundle.asm.json
+bundle.obj.json
