--- a/packages/celer-cli/Cargo.toml
+++ b/packages/celer-cli/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "celer-cli"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 celer-lib = { path = "../celer-lib" }
+yaml-rust = "0.4"
+linked-hash-map = "0.5.4"
