--- a/packages/celer-lib/Cargo.toml
+++ b/packages/celer-lib/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "celer-lib"
-version = "0.1.0"
+version = "3.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "celerlib"
+name = "celer"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
