--- a/packages/celer-lib/Cargo.toml
+++ b/packages/celer-lib/Cargo.toml
@@ -11,6 +11,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "=0.2.79"
+serde = { version = "1.0.136", features = ["derive"]}
+serde_json = "1.0"
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
