--- a/packages/celer-cli/Cargo.toml
+++ b/packages/celer-cli/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "celer-cli"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 celer-lib = { path = "../celer-lib" }
-yaml-rust = "0.4"
+serde = { version = "1.0.136", features = ["derive"]}
+serde_json = "1.0"
+serde_yaml = "0.8.23"
 linked-hash-map = "0.5.4"
+tungstenite = "0.17.2"
+ctrlc = "3.2.2"
+chrono = "0.4.19"
