--- a/packages/celer-lib/Cargo.toml
+++ b/packages/celer-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "celer-lib"
-version = "3.0.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,6 +11,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "=0.2.79"
+serde = { version = "1.0.136", features = ["derive"]}
+serde_json = "1.0"
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
