--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -15,293 +15,293 @@ on:
       - main
 
 jobs:
- check:
-   name: Health Check
-   runs-on: ubuntu-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Just check
-     run: just -f .justci ci-check
+  check:
+    name: Health Check
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just check
+      run: just -f .justci ci-check
 
- rs-lint:
-   name: Lint RS
-   runs-on: ubuntu-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Just rs-lint
-     run: just -f .justci ci-rs-lint
+  rs-lint:
+    name: Lint RS
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just rs-lint
+      run: just -f .justci ci-rs-lint
 
- ts-lint:
-   name: Lint TS
-   runs-on: ubuntu-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Setup | Node 16.14.2
-     uses: actions/setup-node@v3.0.0
-     with:
-       node-version: '16.14.2'
-   - name: Setup | Node Install
-     run: just -f .justci ci-node
-   - name: Just ts-lint
-     run: just -f .justci ci-ts-lint
+  ts-lint:
+    name: Lint TS
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Setup | Node 16.14.2
+      uses: actions/setup-node@v3.0.0
+      with:
+        node-version: '16.14.2'
+    - name: Setup | Node Install
+      run: just -f .justci ci-node
+    - name: Just ts-lint
+      run: just -f .justci ci-ts-lint
 
- cargo-build:
-   name: Build Devtool (Ubuntu)
-   runs-on: ubuntu-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Just cargo-release
-     run: just -f .justci ci-cargo-release
-   - name: Just cargo-tar x86_64 linux
-     run: just -f .justci ci-cargo-tar x86_64 linux
-   - name: Just release-notes
-     run: just -f .justci ci-release-notes
-   - name: Release | Release
-     if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
-     uses: softprops/action-gh-release@v1
-     with:
-       draft: true
-       body_path: release-ci/RELEASE_NOTES.txt
-       files: |
-         release-ci/celer-devtool-x86_64-linux.tar.gz
+  cargo-build-ubuntu:
+    name: Build Devtool (Ubuntu)
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just cargo-release
+      run: just -f .justci ci-cargo-release
+    - name: Just cargo-tar x86_64 linux
+      run: just -f .justci ci-cargo-tar x86_64 linux
+    - name: Just release-notes
+      run: just -f .justci ci-release-notes
+    - name: Release | Release
+      if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v1
+      with:
+        draft: true
+        body_path: release-ci/RELEASE_NOTES.txt
+        files: |
+          release-ci/celer-devtool-x86_64-linux.tar.gz
 
- cargo-build:
-   name: Build Devtool (Mac OS)
-   runs-on: macos-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Just cargo-release
-     run: just -f .justci ci-cargo-release
-   - name: Just cargo-tar x86_64 darwin
-     run: just -f .justci ci-cargo-tar x86_64 darwin
-   - name: Just release-notes
-     run: just -f .justci ci-release-notes
-   - name: Release | Release
-     if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
-     uses: softprops/action-gh-release@v1
-     with:
-       draft: true
-       body_path: release-ci/RELEASE_NOTES.txt
-       files: |
-         release-ci/celer-devtool-x86_64-darwin.tar.gz
+  cargo-build-macos:
+    name: Build Devtool (Mac OS)
+    runs-on: macos-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just cargo-release
+      run: just -f .justci ci-cargo-release
+    - name: Just cargo-tar x86_64 darwin
+      run: just -f .justci ci-cargo-tar x86_64 darwin
+    - name: Just release-notes
+      run: just -f .justci ci-release-notes
+    - name: Release | Release
+      if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v1
+      with:
+        draft: true
+        body_path: release-ci/RELEASE_NOTES.txt
+        files: |
+          release-ci/celer-devtool-x86_64-darwin.tar.gz
 
- cargo-build:
-   name: Build Devtool (Windows)
-   runs-on: windows-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Just cargo-release
-     run: just -f .justci ci-cargo-release
-   - name: Just cargo-tar-windows
-     run: just -f .justci ci-cargo-tar-windows
-   - name: Just release-notes
-     run: just -f .justci ci-release-notes
-   - name: Release | Release
-     if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
-     uses: softprops/action-gh-release@v1
-     with:
-       draft: true
-       body_path: release-ci/RELEASE_NOTES.txt
-       files: |
-         release-ci/celer-devtool-x86_64-windows.tar.gz
+  cargo-build-windows:
+    name: Build Devtool (Windows)
+    runs-on: windows-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just cargo-release
+      run: just -f .justci ci-cargo-release
+    - name: Just cargo-tar-windows
+      run: just -f .justci ci-cargo-tar-windows
+    - name: Just release-notes
+      run: just -f .justci ci-release-notes
+    - name: Release | Release
+      if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v1
+      with:
+        draft: true
+        body_path: release-ci/RELEASE_NOTES.txt
+        files: |
+          release-ci/celer-devtool-x86_64-windows.tar.gz
 
- web-build:
-   name: Build Web
-   runs-on: ubuntu-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Setup | Node 16.14.2
-     uses: actions/setup-node@v3.0.0
-     with:
-       node-version: '16.14.2'
-   - name: Setup | Node Install
-     run: just -f .justci ci-node
-   - name: Skip web-test (because WIP)
-     run: echo "web-test Skipped"
-   - name: Just web-build
-     run: just -f .justci ci-web-build
-   - name: Just web-tar
-     run: just -f .justci ci-web-tar
+  web-build:
+    name: Build Web
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Setup | Node 16.14.2
+      uses: actions/setup-node@v3.0.0
+      with:
+        node-version: '16.14.2'
+    - name: Setup | Node Install
+      run: just -f .justci ci-node
+    - name: Skip web-test (because WIP)
+      run: echo "web-test Skipped"
+    - name: Just web-build
+      run: just -f .justci ci-web-build
+    - name: Just web-tar
+      run: just -f .justci ci-web-tar
 <codegen error: unknown function>
 <codegen error: unknown function>
 <codegen error: unknown function>
 <codegen error: unknown function>
 <codegen error: unknown function>
 
- vsce-build:
-   name: Build VSCE
-   runs-on: ubuntu-latest
-   steps:
-   - name: Setup | Checkout
-     uses: actions/checkout@v2
-   - name: Setup | Rust
-     uses: ATiltedTree/setup-rust@v1
-     with:
-       rust-version: stable
-   - name: Setup | just
-     uses: extractions/setup-just@v1
-   - name: Setup | Python 3.10
-     uses: actions/setup-python@v3.0.0
-     with:
-       python-version: '3.10'
-   - name: Setup | toml, pyyaml, pylint, pylint-quotes
-     uses: BSFishy/pip-action@v1
-     with:
-       packages: |
-         toml
-         pyyaml
-         pylint
-         pylint-quotes
-   - name: Setup | Node 16.14.2
-     uses: actions/setup-node@v3.0.0
-     with:
-       node-version: '16.14.2'
-   - name: Setup | Node Install
-     run: just -f .justci ci-node
-   - name: Just vsce-build
-     run: just -f .justci ci-vsce-build
-   - name: Just vsix
-     run: just -f .justci ci-vsix
-   - name: Just release-notes
-     run: just -f .justci ci-release-notes
-   - name: Release | Release
-     if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
-     uses: softprops/action-gh-release@v1
-     with:
-       draft: true
-       body_path: release-ci/RELEASE_NOTES.txt
-       files: |
-         release-ci/celer.vsix
+  vsce-build:
+    name: Build VSCE
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Setup | Node 16.14.2
+      uses: actions/setup-node@v3.0.0
+      with:
+        node-version: '16.14.2'
+    - name: Setup | Node Install
+      run: just -f .justci ci-node
+    - name: Just vsce-build
+      run: just -f .justci ci-vsce-build
+    - name: Just vsix
+      run: just -f .justci ci-vsix
+    - name: Just release-notes
+      run: just -f .justci ci-release-notes
+    - name: Release | Release
+      if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v1
+      with:
+        draft: true
+        body_path: release-ci/RELEASE_NOTES.txt
+        files: |
+          release-ci/celer.vsix
