--- a/packages/celer-code-generator/src/github-actions.main.yml
+++ b/packages/celer-code-generator/src/github-actions.main.yml
@@ -17,21 +17,21 @@ codegen end
 # Skip linting RS and TS
 
 codegen begin
-DefineJobStart cargo-build,Build Devtool (Ubuntu),ubuntu-latest
+DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 linux
 UploadArtifact cdt-ubuntu release-ci/celer-devtool-x86_64-linux.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart cargo-build,Build Devtool (Mac OS),macos-latest
+DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 darwin
 UploadArtifact cdt-macos release-ci/celer-devtool-x86_64-darwin.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart cargo-build,Build Devtool (Windows),windows-latest
+DefineJobStart cargo-build-windows,Build Devtool (Windows),windows-latest
 JustCIJob cargo-release
 JustCIJob cargo-tar-windows
 UploadArtifact cdt-windows release-ci/celer-devtool-x86_64-windows.tar.gz
