fix multi os jobs

--- a/packages/celer-code-generator/src/github-actions.main.yml
+++ b/packages/celer-code-generator/src/github-actions.main.yml
@@ -11,34 +11,34 @@ on:
 
 jobs:
 codegen begin
-DefineJobStart check,Health Check,ubuntu-latest
+DefineJobStart check,Health Check,ubuntu-latest,#
 JustCIJob check
 codegen end
 # Skip linting RS and TS
 
 codegen begin
-DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest
+DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 linux
 UploadArtifact cdt-ubuntu release-ci/celer-devtool-x86_64-linux.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest
+DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 darwin
 UploadArtifact cdt-macos release-ci/celer-devtool-x86_64-darwin.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart cargo-build-windows,Build Devtool (Windows),windows-latest
+DefineJobStart cargo-build-windows,Build Devtool (Windows),windows-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar-windows
 UploadArtifact cdt-windows release-ci/celer-devtool-x86_64-windows.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart web-build,Build Web,ubuntu-latest
+DefineJobStart web-build,Build Web,ubuntu-latest,#
 SetupNode
 SkipJobWIP web-test
 JustCIJob web-build
@@ -47,7 +47,7 @@ UploadArtifact cwa release-ci/celer-web-app.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart vsce-build,Build VSCE,ubuntu-latest
+DefineJobStart vsce-build,Build VSCE,ubuntu-latest,#
 SetupNode
 JustCIJob vsce-build
 JustCIJob vsix
