--- a/.github/workflows/dev_push.yml
+++ b/.github/workflows/dev_push.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   check:
     name: Health Check
+    #
     runs-on: ubuntu-latest
     steps:
     - name: Setup | Checkout
@@ -40,6 +41,7 @@ jobs:
 
   rs-lint:
     name: Lint RS
+    #
     runs-on: ubuntu-latest
     steps:
     - name: Setup | Checkout
@@ -67,6 +69,7 @@ jobs:
 
   ts-lint:
     name: Lint TS
+    #
     runs-on: ubuntu-latest
     steps:
     - name: Setup | Checkout
@@ -100,7 +103,8 @@ jobs:
 
   cargo-build:
     name: Build Devtool
-    runs-on: [ubuntu-latest,windows-latest,macos-latest]
+    strategy: { matrix: { os: [ ubuntu-latest, macos-latest, windows-latest ] } }
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Setup | Checkout
       uses: actions/checkout@v2
@@ -127,6 +131,7 @@ jobs:
 
   web-build:
     name: Build Web
+    #
     runs-on: ubuntu-latest
     steps:
     - name: Setup | Checkout
@@ -162,6 +167,7 @@ jobs:
 
   vsce-build:
     name: Build VSCE
+    #
     runs-on: ubuntu-latest
     steps:
     - name: Setup | Checkout
