--- a/packages/celer-code-generator/src/github-actions.pub.yml
+++ b/packages/celer-code-generator/src/github-actions.pub.yml
@@ -12,23 +12,23 @@ on:
 
 jobs:
 codegen begin
-DefineJobStart check,Health Check,ubuntu-latest
+DefineJobStart check,Health Check,ubuntu-latest,#
 JustCIJob check
 codegen end
 
 codegen begin
-DefineJobStart rs-lint,Lint RS,ubuntu-latest
+DefineJobStart rs-lint,Lint RS,ubuntu-latest,#
 JustCIJob rs-lint
 codegen end
 
 codegen begin
-DefineJobStart ts-lint,Lint TS,ubuntu-latest
+DefineJobStart ts-lint,Lint TS,ubuntu-latest,#
 SetupNode
 JustCIJob ts-lint
 codegen end
 
 codegen begin
-DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest
+DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 linux
 JustCIJob release-notes
@@ -36,7 +36,7 @@ DraftRelease release-ci/celer-devtool-x86_64-linux.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest
+DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 darwin
 JustCIJob release-notes
@@ -44,7 +44,7 @@ DraftRelease release-ci/celer-devtool-x86_64-darwin.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart cargo-build-windows,Build Devtool (Windows),windows-latest
+DefineJobStart cargo-build-windows,Build Devtool (Windows),windows-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar-windows
 JustCIJob release-notes
@@ -52,7 +52,7 @@ DraftRelease release-ci/celer-devtool-x86_64-windows.tar.gz
 codegen end
 
 codegen begin
-DefineJobStart web-build,Build Web,ubuntu-latest
+DefineJobStart web-build,Build Web,ubuntu-latest,#
 SetupNode
 SkipJobWIP web-test
 JustCIJob web-build
@@ -65,7 +65,7 @@ codegen end
         folder: release-ci/celer-web-app
 
 codegen begin
-DefineJobStart vsce-build,Build VSCE,ubuntu-latest
+DefineJobStart vsce-build,Build VSCE,ubuntu-latest,#
 SetupNode
 JustCIJob vsce-build
 JustCIJob vsix
