fix install script location and rate limit

--- a/.github/workflows/dev_pr.yml
+++ b/.github/workflows/dev_pr.yml
@@ -24,6 +24,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -52,6 +54,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -80,6 +84,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -114,6 +120,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -142,6 +150,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -178,6 +188,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
