--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -28,6 +28,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -56,6 +58,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -84,6 +88,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -118,6 +124,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -158,6 +166,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -198,6 +208,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -238,6 +250,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
@@ -281,6 +295,8 @@ jobs:
         rust-version: stable
     - name: Setup | just
       uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Setup | Python 3.10
       uses: actions/setup-python@v3.0.0
       with:
