--- a/packages/celer-code-generator/src/github-actions.main.yml
+++ b/packages/celer-code-generator/src/github-actions.main.yml
@@ -20,21 +20,21 @@ codegen begin
 DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 linux
-UploadArtifact cdt-ubuntu release-ci/celer-devtool-x86_64-linux.tar.gz
+UploadArtifact cdt-ubuntu,release-ci/celer-devtool-x86_64-linux.tar.gz
 codegen end
 
 codegen begin
 DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar x86_64 darwin
-UploadArtifact cdt-macos release-ci/celer-devtool-x86_64-darwin.tar.gz
+UploadArtifact cdt-macos,release-ci/celer-devtool-x86_64-darwin.tar.gz
 codegen end
 
 codegen begin
 DefineJobStart cargo-build-windows,Build Devtool (Windows),windows-latest,#
 JustCIJob cargo-release
 JustCIJob cargo-tar-windows
-UploadArtifact cdt-windows release-ci/celer-devtool-x86_64-windows.tar.gz
+UploadArtifact cdt-windows,release-ci/celer-devtool-x86_64-windows.tar.gz
 codegen end
 
 codegen begin
@@ -43,7 +43,7 @@ SetupNode
 SkipJobWIP web-test
 JustCIJob web-build
 JustCIJob web-tar
-UploadArtifact cwa release-ci/celer-web-app.tar.gz
+UploadArtifact cwa,release-ci/celer-web-app.tar.gz
 codegen end
 
 codegen begin
@@ -51,5 +51,5 @@ DefineJobStart vsce-build,Build VSCE,ubuntu-latest,#
 SetupNode
 JustCIJob vsce-build
 JustCIJob vsix
-UploadArtifact vsix release-ci/celer.vsix 
+UploadArtifact vsix,release-ci/celer.vsix 
 codegen end
