--- a/packages/celer-code-generator/src/github-actions.main.yml
+++ b/packages/celer-code-generator/src/github-actions.main.yml
@@ -19,14 +19,14 @@ codegen end
 codegen begin
 DefineJobStart cargo-build-ubuntu,Build Devtool (Ubuntu),ubuntu-latest,#
 JustCIJob cargo-release
-JustCIJob cargo-tar x86_64 linux
+JustCIJob cargo-tar-ubuntu
 UploadArtifact cdt-ubuntu,release-ci/celer-devtool-x86_64-linux.tar.gz
 codegen end
 
 codegen begin
 DefineJobStart cargo-build-macos,Build Devtool (Mac OS),macos-latest,#
 JustCIJob cargo-release
-JustCIJob cargo-tar x86_64 darwin
+JustCIJob cargo-tar-macos
 UploadArtifact cdt-macos,release-ci/celer-devtool-x86_64-darwin.tar.gz
 codegen end
 
