--- a/.github/workflows/main_pr.yml
+++ b/.github/workflows/main_pr.yml
@@ -3,12 +3,12 @@
 # Environment
 env:
   CARGO_TERM_COLOR: always
-name: Pull Request (dev)
+name: Pull Request
 
 on:
   pull_request:
     branches:
-      - dev
+      - main
 
 jobs:
   check:
