--- a/packages/celer-code-generator/src/github-actions.dev_pr.yml
+++ b/packages/celer-code-generator/src/github-actions.dev_pr.yml
@@ -1,10 +1,10 @@
 # codegen include github-actions.common.include
-name: Pull Request (dev)
+name: Pull Request
 
 on:
   pull_request:
     branches:
-      - dev
+      - main
 
 jobs:
 codegen begin
