add wasm setup step

--- a/packages/celer-code-generator/src/github-actions.dev_pr.yml
+++ b/packages/celer-code-generator/src/github-actions.dev_pr.yml
@@ -31,6 +31,7 @@ codegen end
 codegen begin
 DefineJobStart web-build,Build Web,ubuntu-latest,#
 SetupNode
+SetupWasmPack
 SkipJobWIP web-test
 JustCIJob web-build
 codegen end
