--- a/packages/celer-code-generator/src/github-actions.pub.yml
+++ b/packages/celer-code-generator/src/github-actions.pub.yml
@@ -51,6 +51,7 @@ codegen end
 codegen begin
 DefineJobStart web-build,Build Web,ubuntu-latest,#
 SetupNode
+SetupWasmPack
 SkipJobWIP web-test
 JustCIJob web-build
 JustCIJob web-tar
