--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -267,6 +267,10 @@ jobs:
         node-version: '16.14.2'
     - name: Setup | Node Install
       run: just -f .justci ci-node
+    - name: Setup | wasm-pack
+      uses: jetli/wasm-pack-action@v0.3.0
+      with:
+        version: 'latest'
     - name: Skip web-test (because WIP)
       run: echo "web-test Skipped"
     - name: Just web-build
