--- a/.github/workflows/main_push.yml
+++ b/.github/workflows/main_push.yml
@@ -107,6 +107,36 @@ jobs:
     - name: Just ts-lint
       run: just -f .justci ci-ts-lint
 
+  run-test:
+    name: Test
+    #
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup | Checkout
+      uses: actions/checkout@v2
+    - name: Setup | Rust
+      uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Setup | just
+      uses: extractions/setup-just@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Setup | Python 3.10
+      uses: actions/setup-python@v3.0.0
+      with:
+        python-version: '3.10'
+    - name: Setup | toml, pyyaml, pylint, pylint-quotes
+      uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          toml
+          pyyaml
+          pylint
+          pylint-quotes
+    - name: Just test
+      run: just -f .justci ci-test
+
   cargo-build-ubuntu:
     name: Build Devtool (Ubuntu)
     #
